ver 0.16.5 (2010/??/??)
* configure.ac
  - disable assertions in the non-debugging build
  - show solaris plugin result correctly
  - add option --enable-solaris-output
* pcm_format: fix 32-to-24 bit conversion (the "silence" bug)
* input:
  - rewind: reduce heap usage
* decoder:
  - ffmpeg: higher precision timestamps
  - ffmpeg: don't require key frame for seeking


ver 0.16.4 (2011/09/01)
* don't abort configure when avahi is not found
* auto-detect libmad without pkg-config
* fix memory leaks
* don't resume playback when seeking to another song while paused
* apply follow_inside_symlinks to absolute symlinks
* fix playback discontinuation after seeking
* input:
  - curl: limit the receive buffer size
  - curl: implement a hard-coded timeout of 10 seconds
* decoder:
  - ffmpeg: workaround for semantic API change in recent ffmpeg versions
  - flac: validate the sample rate when scanning the tag
  - wavpack: obey all decoder commands, stop at CUE track border
* encoder:
  - vorbis: don't send end-of-stream on flush
* output:
  - alsa: fix SIGFPE when alsa announces a period size of 0
  - httpd: don't warn on client disconnect
  - osx: don't drain the buffer when closing
  - pulse: fix deadlock when resuming the stream
  - pulse: fix deadlock when the stream was suspended


ver 0.16.3 (2011/06/04)
* fix assertion failure in audio format mask parser
* fix NULL pointer dereference in playlist parser
* fix playlist files in base music directory
* database: allow directories with just playlists
* decoder:
  - ffmpeg: support libavcodec 0.7


ver 0.16.2 (2011/03/18)
* configure.ac:
  - fix bashism in tremor test
* decoder:
  - tremor: fix configure test
  - gme: detect end of song
* encoder:
  - vorbis: reset the Ogg stream after flush
* output:
  - httpd: fix uninitialized variable
  - httpd: include sys/socket.h
  - oss: AFMT_S24_PACKED is little-endian
  - oss: disable 24 bit playback on FreeBSD


ver 0.16.1 (2011/01/09)
* audio_check: fix parameter in prototype